@@ -8,6 +8,8 @@ All notable changes to this project will be documented in this file.
      error by merlin.
    - Handle ~eldoc-echo-area-use-multiline-p~ and add new settings to
      configure number of lines for type and doc.
+   - Provide hint of expected type and labels when applying a
+     function.
 
 ** 1.1 - [2018-05-02 Wed]
 
